OC3 = OpenCart 3
PS  = PrestaShop (1.7.6+) (1.6- wordt niet meer ondersteund sinds 6.0.0)
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies)
WC2 = WooCommerce 2 (WordPress) (wordt niet meer ondersteund sinds 5.5.2)
WC3 = WooCommerce 3 (WordPress)
WC4 = WooCommerce 4 (WordPress)

6.3.0 (2021-06-??)
------------------
Features:
- ALL: Added the ReportThresholdEuCommerce API call to AcumulusClient.
- ALL: Added the field vattypeid to the InvoiceAdd API call.
- ALL: Changed the settings under "About your shop":
  * For the fields related to the different tax classes (foreign vat, vat free,
    0 vat) there is now just 1 (drop down) setting instead of the former radio
    button + dropdown. A "Not applicable" value has been added to the drop down.
  * Labels and descriptions for the foreign vat classes has been changed to
    reflect the new rules regarding international sales in the EU that apply as
    of 1 july 2021.
- ALL: Added the setting 'Percentage EU Omzetdrempel' to 'Uw factuurinstellingen'
  on the advanced settings form. This feature checks your invoices against the
  new EU Commerce threshold above which you should use foreign vat.

Bugs:
- HS: reinstated use of fallback name for shipping method.
- WC: Sometimes, vat amounts on item lines are stored with a precision of being
  rounded to the cent. If so, the price ex has a higher precision than the price
  inc, even if prices are entered including vat. So, in these cases we should
  not recalculate the price ex after we have obtained a corrected vat rate.
- ALL: Leaving config settings empty was not well supported. This has been
  improved to better distinguish between e.g. 0 and empty.

Refactorings:
- HS: better logging with warnings in method getShippingLines().

6.2.0 (2021-02-10)
------------------
Bugs:
- OC: PHP 7 syntax (?? instead of isset(a) ? a : b) in OC::ConfigStore removed.
- WC|MA2: Het laden van de javascript voor het "geef deze plugin een waardering"