@@ -273,12 +273,12 @@ Als u de eerste optie heeft uitgezet, geldt de tweede optie alleen voor uw zakel
         'option_concept_0' => 'Altijd als definitieve factuur versturen.',
         'option_concept_1' => 'Altijd als concept versturen.',
 
-        'field_eu_commerce_threshold_percentage' => 'Percentage EU Omzetdrempel',
+        'field_eu_commerce_threshold_percentage' => 'EU Omzetdrempelpercentage',
         'desc_eu_commerce_threshold_percentage' => 'Acumulus houdt bij hoeveel omzet binnen de EU u al heeft gedraaid. '
-        . 'Deze %1$s kan een melding geven als u die drempel bijna heeft bereikt, en zal als u daadwerkelijk over de drempel heen gaat de factuur als concept versturen.<br>'
-        . '• Vul een percentage in vanaf waar Acumulus een waarschuwing gaat geven. Gebroken percentages kunt u met een punt (.) aangeven. Het %-teken mag u weglaten.<br>'
-        . '• Vul 100 in als u geen waarschuwing vooraf wil, maar wel als u wilt dat de factuur als concept verstuurd moet worden als u met deze factuur over de drempel heen zou gaan of al bent.<br>'
-        . '• Laat leeg als u deze functie niet wilt gebruiken.',
+            . 'Deze %1$s kan een melding geven als u die drempel bijna heeft bereikt, en zal als u daadwerkelijk over de drempel heen gaat de factuur als concept versturen.<br>'
+            . '• Vul een percentage in vanaf waar Acumulus een waarschuwing gaat geven. Gebroken percentages kunt u met een punt (.) aangeven. Het %-teken mag u weglaten.<br>'
+            . '• Vul 100 in als u geen waarschuwing vooraf wil, maar wel als u wilt dat de factuur als concept verstuurd moet worden als u met deze factuur over de drempel heen zou gaan of al bent.<br>'
+            . '• Laat leeg als u deze functie niet wilt gebruiken.',
         'message_validate_percentage_0' => 'Vul een percentage (een getal tussen 0 en 100) in voor het veld "%s".',
 
         'field_missing_amount' => 'Ontbrekend bedrag',
@@ -654,14 +654,13 @@ If you unchecked the first option, the second option only applies to business cl
         'option_concept_0' => 'Always send as final.',
         'option_concept_1' => 'Always send as concept.',
 
-        // @todo: translate
-//        'field_eu_commerce_threshold_percentage' => 'Percentage EU Omzetdrempel',
-//        'desc_eu_commerce_threshold_percentage' => 'Acumulus houdt bij hoeveel omzet binnen de EU u al heeft gedraaid. '
-//                                                   . 'Deze %1$s kan een melding geven als u die drempel bijna heeft bereikt, en zal als u daadwerkelijk over de drempel heen gaat de factuur als concept versturen.<br>'
-//                                                   . '• Vul een percentage in vanaf waar Acumulus een waarschuwing gaat geven. Gebroken percentages kunt u met een punt (.) aangeven. Het %-teken mag u weglaten.<br>'
-//                                                   . '• Vul 100 in als u geen waarschuwing vooraf wil, maar wel als u wilt dat de factuur als concept verstuurd moet worden als u met deze factuur over de drempel heen zou gaan of al bent.<br>'
-//                                                   . '• Laat leeg als u deze functie niet wilt gebruiken.',
-//        'message_validate_percentage_0' => 'Vul een percentage (een getal tussen 0 en 100) in voor het veld "%s".',
+        'field_eu_commerce_threshold_percentage' => 'EU Commerce percentage',
+        'desc_eu_commerce_threshold_percentage' => 'Acumulus keeps track of how many sales you already have made within the EU aggregated over all your sales channels. '
+                                                   . 'This %1$s can give you a warning when you are nearing the threshold above which you have to charge foreign VAT. If yo are passing tha threshold it will send all new invoices as a concept.<br>'
+                                                   . '• Enter a percentage as of which Acumulus should start warning you. use a decimal point if you wish to enter a fraction. The %-sign is optional.<br>'
+                                                   . '• Enter 100 if yo don\'t want a warning, but want to send invoices as concept as soon as you are passing or already past the threshold.<br>'
+                                                   . '• Leave empty if yo do not want to use this feature.',
+        'message_validate_percentage_0' => 'Enter a percentage (a number between 0 and 100) in the field "%s".',
 
         'field_missing_amount' => 'Missing amount',
         'desc_missing_amount' => 'Indicate what to do when the invoice total and the total of the invoice lines differ. Normally, the 1st option will do fine. However, if this happens often and the missing amounts are always correct (e.g. payment fees for a specific payment provider that are not recognised as a separate invoice line), you\'d better use the 2nd option. This will already add an invoice line to the invoice, so you only have to make it final. Use the 3rd option if a setting or another plugin causes this difference but the invoice turns out to be correct anyway.',
